# win32-getlocaleinfo

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yaml
src/: lib.rs  main.rs
