[package]
name = "win32-locale-info"
version = "0.1.4"
edition = "2024"
authors = ["mokurin000"]
license = "MIT"
description = "Get RFC 1766 / BCP-47 language code on Windows"
repository = "https://github.com/mokurin000/win32-getlocaleinfo"

keywords = ["i18n", "intl", "internationalization", "windows"]

[package.metadata.docs.rs]
targets = [
    "i686-pc-windows-msvc",
    "x86_64-pc-windows-msvc",
    "aarch64-pc-windows-msvc",
]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
windows = { version = "0.62.2", features = [] }

[features]
default = ["global-pref", "legacy-methods"]

legacy-methods = [
    "windows/Win32_Globalization",
    "windows/Win32_System_SystemServices",
]
global-pref = ["windows/System_UserProfile"]

nightly = []
